--- a/MMZegoExpress/android/app/build.gradle
+++ b/MMZegoExpress/android/app/build.gradle
@@ -19,10 +19,10 @@ android {
 
     signingConfigs {
         config { // TODO mmbeauty 配置cosmos后台配置的keystore
-            keyAlias '11'
-            keyPassword '11'
-            storeFile file('11')
-            storePassword '11'
+            keyAlias ''
+            keyPassword ''
+            storeFile file('')
+            storePassword ''
             v2SigningEnabled true   // android 5.0-8.0，必须用V2，否则会有安全问题
             v1SigningEnabled true
         }
