--- a/MMQinniuShortVideoUIDemo/build.gradle
+++ b/MMQinniuShortVideoUIDemo/build.gradle
@@ -31,6 +31,10 @@ task clean(type: Delete) {
 }
 
 apply from: "../mmbeautybase/ext_build.gradle"
+
+ext{
+    targetSdkVersion = 28 //七牛短视频在target29以上会crash
+}
 ext {
     abiFilters = "armeabi-v7a"//"arm64-v8a" // "armeabi"  "armeabi-v7a"
 }
