--- a/MMQinniuShortVideoUIDemo/settings.gradle
+++ b/MMQinniuShortVideoUIDemo/settings.gradle
@@ -1,5 +1,5 @@
 include ':app', ':faceunity', ':TuSDKFilterEngineModule'
-gradle.ext.uselocalbeauty = true
+gradle.ext.uselocalbeauty = false
 include "mmbeautybase"
 project(':mmbeautybase').projectDir = new File(settingsDir,'../mmbeautybase/')
 if(gradle.uselocalbeauty){
