--- a/mmbeautybase/app_build.gradle
+++ b/mmbeautybase/app_build.gradle
@@ -37,4 +37,12 @@ android {
             signingConfig signingConfigs.config
         }
     }
+    packagingOptions {
+        pickFirst "lib/armeabi/libyuvutils.so"
+        pickFirst "lib/arm64-v8a/libyuvutils.so"
+        pickFirst "lib/armeabi-v7a/libyuvutils.so"
+        pickFirst "lib/armeabi/libyuvtools.so"
+        pickFirst "lib/arm64-v8a/libyuvtools.so"
+        pickFirst "lib/armeabi-v7a/libyuvtools.so"
+    }
 }
