--- a/MMZegoExpress/android/app/build.gradle
+++ b/MMZegoExpress/android/app/build.gradle
@@ -1,46 +1,13 @@
-apply plugin: 'com.android.application'
+apply from: "../../../mmbeautybase/app_build.gradle"
 
 android {
     ndkVersion '21.3.6528147'
-    compileSdkVersion 28
-
-    defaultConfig {
-        applicationId "" //TODO mmbeauty 配置cosmos后台配置的applicationid
-        minSdkVersion 21
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-        ndk {
-            //设置支持的SO库架构
-            abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86'
-        }
-
-    }
-
-    signingConfigs {
-        config { // TODO mmbeauty 配置cosmos后台配置的keystore
-            keyAlias ''
-            keyPassword ''
-            storeFile file('')
-            storePassword ''
-            v2SigningEnabled true   // android 5.0-8.0，必须用V2，否则会有安全问题
-            v1SigningEnabled true
-        }
-    }
-
 
     lintOptions {
         checkReleaseBuilds false
         abortOnError false
     }
 
-    buildTypes {
-        debug {
-            minifyEnabled false
-            signingConfig signingConfigs.config
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
 
     dataBinding {
         enabled = true
@@ -51,13 +18,6 @@ android {
         main.res.srcDirs += ['src/main/res', 'src/main/effects/res', 'src/main/makeup/res']
         main.jniLibs.srcDir(["libs", "3rdlibs"])
     }
-
-
-    compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
-    }
-
 }
 
 dependencies {
