--- a/MMAgoraLiveDemo/agora-lib-component/build.gradle
+++ b/MMAgoraLiveDemo/agora-lib-component/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     api 'io.agora.rtc:full-sdk:3.1.2'
     api 'io.agora:agoraplayer:1.1.2'
 
-    api "com.cosmos.mediax:beautyutils:$beautyutils"
+    api "com.immomo.cosmos.mediax:beautyutils:$beautyutils"
     api project(path:":mmbeautybase")
 
 }
