--- a/MMTencentLVBSDK/.gitignore
+++ b/MMTencentLVBSDK/.gitignore
@@ -7,3 +7,9 @@
 /captures
 .externalNativeBuild
 .cxx
+/beautysettingkit/build
+/debug/build
+/livelinkmicdemoold/build
+liveplayerdemo/build
+login/build
+livepusherdemo/build
