--- a/MMQiniuRTC_v3.x/app/build.gradle
+++ b/MMQiniuRTC_v3.x/app/build.gradle
@@ -1,41 +1,12 @@
-apply plugin: 'com.android.application'
-android {
-    compileSdkVersion 29
-
-    defaultConfig {
-        applicationId "com.qiniu.droid.rtc.demo"
-        minSdkVersion 18
-        targetSdkVersion 29
-        versionCode 32
-        versionName "3.1.0"
-        buildConfigField "long", "BUILD_TIMESTAMP", System.currentTimeMillis() + "L"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    lintOptions {
-        disable 'GoogleAppIndexingWarning'
-        abortOnError false
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-}
+apply from: "../../mmbeautybase/app_build.gradle"
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation "androidx.appcompat:appcompat:$appcompat"
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     implementation 'com.bugsnag:bugsnag-android-ndk:1.+'
     implementation 'de.greenrobot:eventbus:2.4.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.qiniu:happy-dns:0.2.17'
 
     // QNDroidRTCLibrary
@@ -45,4 +16,5 @@ dependencies {
     } else {
         implementation fileTree(include: ['*.jar'], dir: 'libs')
     }
+    implementation project(':mmbeautybase')
 }
