--- a/MMQiniuRTC_v3.x/build.gradle
+++ b/MMQiniuRTC_v3.x/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = "1.3.72"
     repositories {
         jcenter()
         maven {
@@ -9,8 +10,8 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
-
+        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -30,6 +31,12 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
+apply from: "../mmbeautybase/ext_build.gradle"
 ext {
     buildWithQNDroidRTCLibrary = false
+    if (gradle.uselocalbeauty) {
+        ARTIFACT_ID_DEMO='beautysdk_demo'
+        apply from: "'../../../../../../mmsdk/beauty-sdk/build_ext.gradle"
+        compileSdkVersion = 29
+    }
 }
