--- a/MMQiniuRTC_v3.x/gradle.properties
+++ b/MMQiniuRTC_v3.x/gradle.properties
@@ -14,3 +14,5 @@
 # org.gradle.parallel=true
 #Thu Sep 29 14:11:46 CST 2016
 android.useDeprecatedNdk=true
+android.useAndroidX=true
+android.enableJetifier=true
