--- a/MMTencent/build.gradle
+++ b/MMTencent/build.gradle
@@ -19,6 +19,9 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+        maven{
+            url "https://s01.oss.sonatype.org/content/repositories/releases/"
+        }
     }
 }
 
