--- a/mmbeautybase/build.gradle
+++ b/mmbeautybase/build.gradle
@@ -26,15 +26,18 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-//    implementation "androidx.appcompat:appcompat:$appcompat"
-//    implementation 'androidx.core:core-ktx:1.3.1'
-
     if (gradle.uselocalbeauty) {
         api project(":mmbeautysdk")
     } else {
-        api "com.immomo.cosmos.mediax:beautysdk_interact:$VERSION_NAME"
+        api fileTree(dir: 'libs', include: ['*.aar'])
     }
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+//    implementation "androidx.appcompat:appcompat:$appcompat"
+//    implementation 'androidx.core:core-ktx:1.3.1'
     api "com.immomo.cosmos.mediax:beautyutils:$beautyutils"
+    implementation "androidx.annotation:annotation:1.0.0"
+
+    implementation "com.squareup.okhttp3:okhttp:3.14.9"
+    implementation 'com.google.code.gson:gson:2.2.4'
+    implementation "com.getkeepsafe.relinker:relinker:1.4.4"
 }
